--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "@vue/cli-service": "~5.0.0",
     "babel-plugin-import": "^1.13.6",
     "less": "^4.0.0",
-    "less-loader": "^8.0.0"
+    "less-loader": "^8.0.0",
+    "unplugin-vue-components": "^0.24.1"
   },
   "browserslist": [
     "> 1%",
