--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,3 +1,11 @@
+/*
+ * @Author: RiverHell
+ * @Github: https://github.com/RiverHell-AI
+ * @Date: 2023-04-03 22:25:27
+ * @LastEditors: RiverHell
+ * @LastEditTime: 2023-04-05 01:13:11
+ * @Description: Please write the description of this file.
+ */
 {
   "compilerOptions": {
     "target": "es5",
@@ -16,5 +24,6 @@
       "scripthost"
     ]
   },
-  "allowJs": true
+  "allowJs": true,
+  
 }
