--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.8.3",
     "vant": "^4.1.2",
     "vue": "^3.2.13",
+    "vue-marquee-text-component": "^2.0.1",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
